--- a/main.ipynb
+++ b/main.ipynb
@@ -96,7 +96,6 @@
    "outputs": [],
    "source": [
     "X_inputs = tf.placeholder(dtype=tf.float32, shape=[None, 32, 32, 3])\n",
-    "random_rolls = tf.placeholder(dtype=tf.float32, shape=[54])\n",
     "y_inputs = tf.placeholder(dtype=tf.uint8, shape=[None])\n",
     "is_training = tf.placeholder(dtype=tf.bool)\n",
     "y_test_tf = tf.placeholder(dtype=tf.int64, shape=[None])\n",
@@ -122,7 +121,7 @@
     "\n",
     "labels = tf.one_hot(y_inputs, 10)\n",
     "\n",
-    "out = architecture(X_inputs, random_rolls, is_training, strategy='pad',\n",
+    "out = architecture(X_inputs, is_training, strategy='pad',\n",
     "                   scope='stoch_depth', P=0.5, L=54)\n",
     "\n",
     "loss = loss_function(logits=out, labels=labels, weight_decay=weight_decay,\n",
@@ -201,10 +200,8 @@
     "                if flip_bool:\n",
     "                    X_train_batch[inx] = np.flip(X_train_batch[inx], axis=1)\n",
     "\n",
-    "            random_rolls_batch = np.random.uniform(size=54)\n",
     "            _, loss_val, train_summ = sess.run([step, loss, training_summary],\n",
     "                                               feed_dict={X_inputs: X_train_batch,\n",
-    "                                                          random_rolls: random_rolls_batch,\n",
     "                                                          y_inputs: y_train_batch,\n",
     "                                                          is_training: True})\n",
     "        writer.add_summary(train_summ, epoch)\n",
@@ -217,7 +214,6 @@
     "            X_test_batch, y_test_batch = X_test[indices_test], y_test[indices_test]\n",
     "\n",
     "            test_batch_accuracy = sess.run(error_num, feed_dict={X_inputs: X_test_batch,\n",
-    "                                                                 random_rolls: random_rolls_batch,\n",
     "                                                                 y_test_tf: y_test_batch,\n",
     "                                                                 is_training: False})\n",
     "            scores_list.append(test_batch_accuracy)\n",
